kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: employee-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 758626605773.dkr.ecr.ap-south-1.amazonaws.com/employee-frontend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
